--- a/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
@@ -362,9 +362,10 @@ and resuspension processes (explained above under 'Settling velocity') also solv
 
 ### Steadystate mass
 ```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
+
 library(stringi)
 
-World$NewSolver("SB1Solve")
+World$NewSolver("SteadyStateSolver")
 
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
 
@@ -373,7 +374,8 @@ MW <- World$fetchData("MW")
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(MW*365*24*60*60))
 
-SSsolve.R <- World$Solve(emissions)
+World$Solve(emissions)
+SSsolve.R <- World$Masses()
 
 SSsolve.excel <- read.xlsx(SBExcelName,
                              sheet=11,
@@ -382,30 +384,34 @@ SSsolve.excel <- read.xlsx(SBExcelName,
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
+  rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+SSsolve.R <- SSsolve.R |> 
+  left_join(World$states$asDataFrame, by="Abbr") |>
+  mutate(Abbr =  paste0(accronym_map[SubCompart], 
                             accronym_map2[Scale])) |>
   mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
   mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
   mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
   group_by(Scale, SubCompart, Species, Abbr) |>
-  summarise(EqMass = sum(EqMass))
+  summarise(Mass_kg = sum(Mass_kg))
 
 merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
+  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
+  mutate(reldiff = absdiff/Mass_kg.R)
+
+#print("Difference in emissions between R and Excel")
+
+#knitr::kable(merged_SS_SB1, format="markdown")
 
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0(substance)) +
+  ggtitle(paste0( substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme()
-
-
-
 ```
 
 The differences in k's drives the model output: the steady state mass. So a final check is to see how much the steady state masses differ between both implementations of SimpleBox (Figure 3). From this it is clear that there  are differences up to `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.
@@ -538,7 +544,7 @@ from-to k's. All relative differences are now smaller than 1 percentile.
 
 library(stringi)
 
-World$NewSolver("SB1Solve")
+World$NewSolver("SteadyStateSolver")
 
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
 
@@ -547,7 +553,8 @@ MW <- World$fetchData("MW")
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(MW*365*24*60*60))
 
-SSsolve.R <- World$Solve(emissions)
+World$Solve(emissions)
+SSsolve.R <- World$Masses()
 
 SSsolve.excel <- read.xlsx(SBExcelName,
                              sheet=11,
@@ -556,19 +563,22 @@ SSsolve.excel <- read.xlsx(SBExcelName,
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
+  rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+SSsolve.R <- SSsolve.R |> 
+  left_join(World$states$asDataFrame, by="Abbr") |>
+  mutate(Abbr =  paste0(accronym_map[SubCompart], 
                             accronym_map2[Scale])) |>
   mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
   mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
   mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
   group_by(Scale, SubCompart, Species, Abbr) |>
-  summarise(EqMass = sum(EqMass))
+  summarise(Mass_kg = sum(Mass_kg))
 
 merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
+  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
+  mutate(reldiff = absdiff/Mass_kg.R)
 
 #print("Difference in emissions between R and Excel")
 
