--- a/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
@@ -366,7 +366,7 @@ and resuspension processes (explained above under 'Settling velocity') also solv
 ```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 library(stringi)
 
-World$NewSolver("SB1Solve")
+World$NewSolver("SteadyStateSolver")
 
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
 
@@ -375,7 +375,8 @@ MW <- World$fetchData("MW")
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(MW*365*24*60*60))
 
-SSsolve.R <- World$Solve(emissions)
+World$Solve(emissions)
+SSsolve.R <- World$Masses()
 
 SSsolve.excel <- read.xlsx(SBExcelName,
                              sheet=11,
@@ -384,29 +385,30 @@ SSsolve.excel <- read.xlsx(SBExcelName,
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
+  rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+SSsolve.R <- SSsolve.R |> 
+  left_join(World$states$asDataFrame, by="Abbr") |>
+  mutate(Abbr =  paste0(accronym_map[SubCompart], 
                             accronym_map2[Scale])) |>
   mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
   mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
   mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
   group_by(Scale, SubCompart, Species, Abbr) |>
-  summarise(EqMass = sum(EqMass))
+  summarise(Mass_kg = sum(Mass_kg))
 
 merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
+  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
+  mutate(reldiff = absdiff/Mass_kg.R)
 
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0(substance)) +
+  ggtitle(paste0( substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme()
-
-
 
 ```
 
@@ -535,10 +537,9 @@ from-to k's. All relative differences are now smaller than 1 percentile.
 ## Steadystate mass
 
 ```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
-
 library(stringi)
 
-World$NewSolver("SB1Solve")
+World$NewSolver("SteadyStateSolver")
 
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
 
@@ -547,7 +548,8 @@ MW <- World$fetchData("MW")
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(MW*365*24*60*60))
 
-SSsolve.R <- World$Solve(emissions)
+World$Solve(emissions)
+SSsolve.R <- World$Masses()
 
 SSsolve.excel <- read.xlsx(SBExcelName,
                              sheet=11,
@@ -556,31 +558,31 @@ SSsolve.excel <- read.xlsx(SBExcelName,
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
+  rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+SSsolve.R <- SSsolve.R |> 
+  left_join(World$states$asDataFrame, by="Abbr") |>
+  mutate(Abbr =  paste0(accronym_map[SubCompart], 
                             accronym_map2[Scale])) |>
   mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
   mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
   mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
   group_by(Scale, SubCompart, Species, Abbr) |>
-  summarise(EqMass = sum(EqMass))
+  summarise(Mass_kg = sum(Mass_kg))
 
 merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
-
-#print("Difference in emissions between R and Excel")
-
-#knitr::kable(merged_SS_SB1, format="markdown")
+  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
+  mutate(reldiff = absdiff/Mass_kg.R)
 
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0(substance)) +
+  ggtitle(paste0( substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme()
+
 ```
 
 To test if the small differences (<0.1%) in first order rate constants is negligible (Figures 4 and 5), the steady state masses should also not differ by more than 0.1% between the R and Spreadsheet implementations of SimpleBox. This is indeed the case (Figure 6) as the max difference in now only `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=5)*100`%. This proves that the port of SimpleBox to R is successful in reproducing the results from the original spreadsheet implementation for chemicals of class `r World$fetchData("ChemClass")`.
